--- a/src/FinancialObjectModel.csproj
+++ b/src/FinancialObjectModel.csproj
@@ -8,6 +8,8 @@
     <RootNamespace>FinancialObjectModel</RootNamespace>
     <AssemblyName>FinancialObjectModel</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,11 +31,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Xml.Serialization" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security.cs" />
     <Compile Include="Equity.cs" />
+    <Compile Include="IUnderlying.cs" />
+    <Compile Include="Index.cs" />
+    <Compile Include="Option.cs" />
+    <Compile Include="OptionType.cs" />
+    <Compile Include="OptionRights.cs" />
+    <Compile Include="EquityOption.cs" />
+    <Compile Include="ExtensionMethods.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
