--- a/src/FinancialObjectModel.csproj
+++ b/src/FinancialObjectModel.csproj
@@ -14,7 +14,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -39,13 +39,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security.cs" />
     <Compile Include="Equity.cs" />
-    <Compile Include="IUnderlying.cs" />
     <Compile Include="Index.cs" />
     <Compile Include="Option.cs" />
     <Compile Include="OptionType.cs" />
     <Compile Include="OptionRights.cs" />
     <Compile Include="EquityOption.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="IDerivative.cs" />
+    <Compile Include="Underlying.cs" />
+    <Compile Include="FOM.cs" />
+    <Compile Include="IMarketDataService.cs" />
+    <Compile Include="IReferenceDataService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <Policies>
+          <DotNetNamingPolicy DirectoryNamespaceAssociation="Hierarchical" ResourceNamePolicy="FileFormatDefault" />
+        </Policies>
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
